--- a/global.css
+++ b/global.css
@@ -4,3 +4,36 @@
   margin: 10px;
   border-radius: 3px;
 }
+
+.background {
+  fill: none;
+  pointer-events: all;
+}
+
+#states {
+  fill: #aaa;
+}
+
+#states .active {
+  display: none;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
+.county-boundary {
+  fill: #aaa;
+  stroke: #fff;
+  stroke-width: 0.5px;
+}
+
+.county-boundary:hover,
+.state:hover {
+  fill: red;
+}
