--- a/public/global.css
+++ b/public/global.css
@@ -14,7 +14,11 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+.title {
+  font-size: 30px;
+}
 .subtitle {
+  margin-top: 5px;
   font-size: 16px;
   color: rgba(0, 0, 0, 0.7);
   font-style: italic;
@@ -92,9 +96,14 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  width: calc(100% - 40px);
+  width: calc(100% - 60px);
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 40px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.header img {
+  margin-top: 10px;
+  max-width: 400px;
 }
