--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,8 @@
+:root {
+  --red: #c41230;
+  --grey: rgba(0, 0, 0, 0.7);
+}
+
 h1,
 h2,
 h3,
@@ -9,9 +14,9 @@ p {
 }
 
 .cmu-red {
-  color: #b00 ;
+  color: #b00;
 }
- 
+
 .cmu-steel-grey {
   color: #e0e0e0;
 }
@@ -21,9 +26,8 @@ p {
 }
 
 .cmu-black {
-  color: 000000 ;
+  color: 000000;
 }
-
 
 html,
 body {
@@ -33,11 +37,13 @@ body {
 
 .title {
   font-size: 30px;
+  margin-right: 30px;
 }
+
 .subtitle {
   margin-top: 5px;
   font-size: 16px;
-  color: rgba(0, 0, 0, 0.7);
+  color: var(--grey);
   font-style: italic;
   font-weight: 300;
 }
@@ -76,12 +82,12 @@ body {
 
 .county-boundary:hover,
 .state:hover {
-  fill: red;
+  fill: var(--red);
 }
 
 .line {
   fill: none;
-  stroke: red;
+  stroke: var(--red);
   stroke-width: 2px;
 }
 
@@ -113,14 +119,50 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  width: calc(100% - 60px);
   margin-left: 20px;
   margin-right: 40px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
-.header img {
+/* .header img {
   margin-top: 10px;
   max-width: 400px;
+} */
+
+.brands {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: right;
+  width: calc(100% - 60px);
+  padding-left: 20px;
+  padding-right: 40px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  border-bottom: 2px solid var(--red);
+}
+
+.pure-menu-link {
+  color: var(--grey);
+  border-left: 1px solid var(--red);
+  margin: 0px;
+}
+
+.time {
+  display: inline-flex;
+  align-items: center;
+  padding: 18px;
+}
+
+.time p {
+  color: var(--grey);
+  margin-left: 15px;
+}
+
+.options {
+  margin-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
