--- a/public/global.css
+++ b/public/global.css
@@ -3,7 +3,7 @@
   --grey: rgba(0, 0, 0, 0.7);
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -11,7 +11,7 @@ h5,
 h6,
 p {
   margin: 0px;
-}
+} */
 
 .cmu-red {
   color: #b00;
@@ -31,8 +31,9 @@ p {
 
 html,
 body {
-  height: 100%;
-  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .title {
@@ -161,8 +162,8 @@ body {
   margin-left: 15px;
 }
 
-.options {
+/* .options {
   margin-left: 15px;
   margin-top: 5px;
   margin-bottom: 5px;
-}
+} */
