--- a/public/global.css
+++ b/public/global.css
@@ -1,5 +1,6 @@
 :root {
   --red: #c41230;
+  --red-alpha: rgba(187, 0, 0, 0.8);
   --grey: rgba(0, 0, 0, 0.7);
 }
 
@@ -154,7 +155,6 @@ body {
 .time {
   display: inline-flex;
   align-items: center;
-  padding: 18px;
 }
 
 .time p {
@@ -162,8 +162,36 @@ body {
   margin-left: 15px;
 }
 
-/* .options {
-  margin-left: 15px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-} */
+.slider {
+  -webkit-appearance: none;
+  width: 200px;
+  height: 6px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--red-alpha);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--red-alpha);
+  cursor: pointer;
+}
