--- a/global.css
+++ b/global.css
@@ -1,9 +1,10 @@
 :root {
   --red: #c41230;
+  --red-alpha: rgba(187, 0, 0, 0.8);
   --grey: rgba(0, 0, 0, 0.7);
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -11,7 +12,7 @@ h5,
 h6,
 p {
   margin: 0px;
-}
+} */
 
 .cmu-red {
   color: #b00;
@@ -31,8 +32,9 @@ p {
 
 html,
 body {
-  height: 100%;
-  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .title {
@@ -153,7 +155,6 @@ body {
 .time {
   display: inline-flex;
   align-items: center;
-  padding: 18px;
 }
 
 .time p {
@@ -161,8 +162,36 @@ body {
   margin-left: 15px;
 }
 
-.options {
-  margin-left: 15px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+.slider {
+  -webkit-appearance: none;
+  width: 200px;
+  height: 6px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--red-alpha);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--red-alpha);
+  cursor: pointer;
 }
