--- a/public/global.css
+++ b/public/global.css
@@ -37,6 +37,11 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+#vizbox {
+  width: 100%;
+  height: 100vh;
+}
+
 .title {
   font-size: 30px;
   margin-right: 30px;
