--- a/global.css
+++ b/global.css
@@ -37,6 +37,11 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+#vizbox {
+  width: 100%;
+  height: 100vh;
+}
+
 .title {
   font-size: 30px;
   margin-right: 30px;
@@ -195,4 +200,8 @@ body {
   border-radius: 50%;
   background: var(--red-alpha);
   cursor: pointer;
+}
+
+#vizbox {
+  position: relative;
 }
