--- a/public/global.css
+++ b/public/global.css
@@ -102,61 +102,6 @@ body {
   display: inline-flex;
 }
 
-.sensor-button {
-  height: 30px;
-  margin-left: 20px;
-  font-size: 15px;
-}
-
-.center {
-  align-items: center;
-}
-
-.options-group {
-  margin-top: 10px;
-  align-items: center;
-  display: inline-flex;
-}
-
-.pure-button-group {
-  margin-left: 10px;
-}
-
-.header {
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 40px;
-  margin-top: 10px;
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-/* .header img {
-  margin-top: 10px;
-  max-width: 400px;
-} */
-
-.brands {
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-  text-align: right;
-  width: calc(100% - 60px);
-  padding-left: 20px;
-  padding-right: 40px;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  border-bottom: 2px solid var(--red);
-}
-
-.pure-menu-link {
-  color: var(--grey);
-  border-left: 1px solid var(--red);
-  margin: 0px;
-}
-
 .time {
   display: inline-flex;
   align-items: center;
@@ -204,4 +149,9 @@ body {
 
 #vizbox {
   position: relative;
+}
+
+button.mapboxgl-ctrl-zoom-in,
+button.mapboxgl-ctrl-zoom-out {
+  margin: 0;
 }
