--- a/global.css
+++ b/global.css
@@ -109,13 +109,15 @@ body {
 }
 
 .time p {
+  flex-shrink: 0;
+  margin-left: 10px;
   color: var(--grey);
-  margin-left: 15px;
 }
 
 .slider {
+  flex-grow: 1;
   -webkit-appearance: none;
-  width: 320px;
+  /* width: 320px; */
   height: 6px;
   padding: 0;
   border-radius: 5px !important;
