--- a/public/global.css
+++ b/public/global.css
@@ -159,3 +159,8 @@ button.mapboxgl-ctrl-zoom-in,
 button.mapboxgl-ctrl-zoom-out {
   margin: 0;
 }
+
+.axis {
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
+}
