almost fixed changing sensors

--- a/public/global.css
+++ b/public/global.css
@@ -120,3 +120,9 @@ button.mapboxgl-popup-close-button {
   padding: 2px;
   color: #666;
 }
+
+.tooltip-text {
+  font-family: 'Open Sans' sans-serif;
+  margin: 0px;
+  padding: 5px;
+}
