--- a/global.css
+++ b/global.css
@@ -126,3 +126,8 @@ button.mapboxgl-popup-close-button {
   margin: 0px;
   padding: 5px;
 }
+
+.chart-svg {
+  max-width: 370px;
+  max-height: 277.5px;
+}
