use CMU colors for map
rgba(170, 102, 0, .3) = gold, 30% opacityrgba(204, 0, 0, .8) = red, 80% opacityrgba(120, 0, 0, 1) = red, dark

--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,6 @@
 :root {
-  --red: #c41230;
-  --red-alpha: rgba(187, 0, 0, 0.8);
+  --red: #cc0000;
+  --red-alpha: rgba(187, 0, 0, 0);
   --grey: rgba(0, 0, 0, 0.7);
 }
 
