Added z-index fix on focused button

--- a/public/global.css
+++ b/public/global.css
@@ -129,6 +129,7 @@ button.mapboxgl-popup-close-button {
 input:focus,
 button:focus {
   outline: #5E666E 3px solid !important;
+  z-index: 100;
 
 }
 
