--- a/public/global.css
+++ b/public/global.css
@@ -128,8 +128,9 @@ button.mapboxgl-popup-close-button {
 
 input:focus,
 button:focus {
-  outline: var(--red-alpha) 1px solid !important;
-  z-index: 100;
+  /* outline: var(--red-alpha) 1px solid !important; */
+  box-shadow: 0 0 2px 2px #0096ff !important;
+  z-index: 10000;
 }
 
 .map-popup .mapboxgl-popup-content {
