--- a/public/global.css
+++ b/public/global.css
@@ -3,14 +3,10 @@
   --grey: #767676;
 }
 
-html,
-body {
+#vizbox {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-}
-
-#vizbox {
   position: relative;
   width: 100%;
   height: 90vh;
@@ -70,8 +66,8 @@ button.mapboxgl-popup-close-button {
   margin: 0px;
 }
 
-input:focus,
-button:focus {
+#vizbox input:focus,
+#vizbox button:focus {
   outline: var(--red) 1px solid !important;
   box-shadow: 0 0 0 4px #fff !important;
   border: solid 1px var(--red) !important;
@@ -123,4 +119,10 @@ button:focus {
   margin: 0;
   top: 100%;
   left: 0;
+}
+
+.mapboxgl-ctrl-group,
+.mapboxgl-ctrl-group button:focus,
+.mapboxgl-ctrl-group button:focus:first-child {
+  border-radius: 0;
 }
