--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,7 @@
 :root {
   --red: #c00;
   --grey: #767676;
+  --darkgrey: #333;
 }
 
 #vizbox {
@@ -74,21 +75,6 @@ button.mapboxgl-popup-close-button {
   z-index: 10000;
 }
 
-.map-popup .mapboxgl-popup-content {
-  background-color: #fff;
-  padding: 5px 5px;
-  color: var(--grey);
-  border-color: var(--grey);
-  border-style: solid;
-  border-radius: 4px;
-  border-width: 1px;
-}
-
-.map-popup .mapboxgl-popup-tip {
-  border-width: 4px;
-  border-top-color: var(--grey);
-}
-
 .d3-tip {
   background-color: #fff;
   padding: 5px 5px;
@@ -134,4 +120,30 @@ button.mapboxgl-popup-close-button {
 
 .mapboxgl-canvas {
   min-height: 550px;
+}
+
+.map-popup .mapboxgl-popup-content {
+  background-color: #fff;
+  padding: 5px 5px;
+  color: var(--darkgrey);
+  border-color: var(--grey);
+  border-style: solid;
+  border-radius: 4px;
+  border-width: 1px;
+}
+
+.map-popup .mapboxgl-popup-tip {
+  border-width: 4px;
+  border-top-color: var(--grey);
+}
+
+.map-popup-region-name {
+  font-weight: 600;
+}
+
+.map-popup-region-value {
+  background-color: #767676;
+
+  color: #fff;
+  padding: 2px 4px;
 }
