--- a/public/global.css
+++ b/public/global.css
@@ -128,6 +128,10 @@ button.mapboxgl-popup-close-button {
   min-height: 550px;
 }
 
+.mapboxgl-canvas:focus {
+  outline: none;
+}
+
 .map-popup {
   z-index: 10000;
 }
