--- a/global.css
+++ b/global.css
@@ -75,9 +75,9 @@ button.mapboxgl-popup-close-button {
 
 #vizbox input:focus,
 #vizbox button:focus {
-  outline: var(--red) 1px solid !important;
+  outline: var(--red) 1px solid;
   box-shadow: 0 0 0 4px #fff !important;
-  border: solid 1px var(--red) !important;
+  /* border: solid 1px var(--red) !important; */
   z-index: 10000;
 }
 
@@ -166,4 +166,49 @@ button.mapboxgl-popup-close-button {
   outline: none;
   /* border: none; */
   border-radius: 3px;
+}
+
+/* search bar */
+.search-bar {
+  font-size: 14px !important;
+  font-family: 'Open Sans', Helvetica, sans-serif !important;
+}
+
+.search-bar .input.autocomplete-input {
+  border-color: transparent !important;
+  background-color: transparent !important;
+
+  height: 36px !important;
+  margin: 4px !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+  width: 95% !important;
+  color: #111 !important;
+}
+
+.search-bar .input.autocomplete-input:focus {
+  outline: none !important;
+  background-color: transparent !important;
+  border-bottom: solid 1px var(--red) !important;
+}
+
+.search-bar .autocomplete-list {
+  padding-top: 3px !important;
+  padding-left: 3px !important;
+  border: transparent !important;
+  background-color: transparent !important;
+  width: 96% !important;
+}
+
+.search-bar .autocomplete-list .autocomplete-list-item {
+  border-radius: 5px !important;
+  background-color: transparent !important;
+  transition: all 0.1s ease-in !important;
+}
+
+.search-bar .autocomplete-list .autocomplete-list-item.selected,
+.search-bar .autocomplete-list .autocomplete-list-item:hover {
+  background-color: var(--red) !important;
+  border-radius: 5px !important;
+  color: #fff !important;
 }
