--- a/src/styles/pg-button.css
+++ b/src/styles/pg-button.css
@@ -1,6 +1,8 @@
 .pg-button {
   width: 2.2em;
   padding: 0.2em;
+  line-height: 1;
+  margin: unset;
   box-sizing: border-box;
 
   position: relative;
