--- a/src/styles/pg-button.css
+++ b/src/styles/pg-button.css
@@ -28,6 +28,7 @@
 }
 
 .pg-button:disabled {
+  background-color: #d3d3d3;
   cursor: not-allowed;
 }
 
@@ -36,5 +37,43 @@
 }
 
 .pg-button:hover {
+  background-color: #f2f2f2;
+}
+
+.pg-button-group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.pg-button-vertical-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.pg-button-group .pg-button:nth-child(n + 2) {
+  border-left-width: 1px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.pg-button-group .pg-button:nth-last-child(n + 2) {
+  border-right: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.pg-button-vertical-group .pg-button:nth-child(n + 2) {
+  border-top-width: 1px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.pg-button-vertical-group .pg-button:nth-last-child(n + 2) {
+  border-bottom: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.pg-button-group > .selected {
   background-color: #f2f2f2;
 }
