--- a/src/global.css
+++ b/src/global.css
@@ -59,7 +59,8 @@ button.mapboxgl-popup-close-button {
 }
 
 #vizbox input:focus,
-#vizbox button:focus {
+#vizbox button:focus,
+#vizbox select:focus {
   outline: var(--red) 1px solid;
   box-shadow: 0 0 0 4px #fff !important;
   /* border: solid 1px var(--red) !important; */
