--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,48 +1,10 @@
-.roof.invert form {
-  position: relative;
-  height: unset;
-}
-
-.roof.invert > div {
-  justify-content: space-between;
-}
-
-.roof.invert .wordmark {
-}
-
-.viz-menu-button {
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 3em;
-  width: 2em;
-}
-
-.viz-menu-button > svg {
-  width: 100%;
-  height: 100%;
-  fill: currentColor;
-}
-
-.viz-menu {
-  line-height: initial;
+.viz-header {
   display: flex;
-}
-
-.viz-menu > a {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.2em 1em;
-  font-size: 1.1rem;
-}
-.viz-menu > a:hover {
-  background: rgba(0, 0, 0, 0.2);
+  flex-direction: column;
 }
 
 .viz-name {
+  order: 4;
   margin: 1em 0;
   padding-top: 0;
   padding-bottom: 0;
@@ -95,19 +57,6 @@
     padding-bottom: 0;
   }
 
-  .roof div.viz-menu {
-    display: none;
-    padding-bottom: 0;
-  }
-
-  .viz-menu-button.open + .viz-menu {
-    display: flex;
-  }
-
-  .viz-menu-button {
-    display: block;
-  }
-
   .viz-name > h1 {
     font-size: 1.8rem;
   }
@@ -124,6 +73,7 @@
 }
 
 .viz-mission {
+  order: 5;
   padding-top: 0.2em;
   padding-bottom: 0.5em;
   color: var(--darkgrey);
@@ -140,4 +90,10 @@
   border-bottom: none;
   font-weight: 700;
   font-style: italic;
+}
+
+#container {
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
 }
