--- a/src/global.css
+++ b/src/global.css
@@ -152,3 +152,4 @@ button.mapboxgl-popup-close-button {
 
 @import './styles/pg-button.css';
 @import './styles/loading.css';
+@import './styles/no-data.css';
