--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,8 +1,10 @@
-.loading {
+.loading,
+.loading-bg {
   position: relative;
 }
 
-.loading::before {
+.loading-bg::before {
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -12,11 +14,12 @@
   background: rgba(255, 255, 255, 0.8);
 }
 
+.loading-bg::after,
 .loading::after {
   z-index: 101;
   position: absolute;
-  top: calc(50% - 10px);
-  left: calc(50% - 10px);
+  top: calc(50% - 14px);
+  left: calc(50% - 14px);
   content: '';
   border: 4px solid #f3f3f3;
   border-radius: 50%;
