feat: add option to render encoding in map controls

--- a/src/styles/pg-button.css
+++ b/src/styles/pg-button.css
@@ -74,6 +74,7 @@
   border-bottom-right-radius: 0;
 }
 
+.pg-button-vertical-group > .selected,
 .pg-button-group > .selected {
   background-color: #f2f2f2;
 }
