--- a/src/global.css
+++ b/src/global.css
@@ -59,6 +59,7 @@ button.mapboxgl-popup-close-button {
   box-shadow: 0 0 0 4px #fff !important;
   /* border: solid 1px var(--red) !important; */
   z-index: 10000;
+  background-color: unset;
 }
 
 .d3-tip {
