--- a/src/styles/pg-button.css
+++ b/src/styles/pg-button.css
@@ -77,3 +77,7 @@
 .pg-button-group > .selected {
   background-color: #f2f2f2;
 }
+
+.pg-button-group > .selected:focus {
+  background-color: #f2f2f2 !important;
+}
