--- a/src/global.css
+++ b/src/global.css
@@ -80,5 +80,5 @@ button.mapboxgl-popup-close-button {
 
 @import './styles/pg-button.css';
 @import './styles/loading.css';
-@import './styles/no-data.css';
+@import './styles/message-overlay.css';
 @import './styles/vega.css';
