--- a/src/global.css
+++ b/src/global.css
@@ -31,8 +31,8 @@
     flex-basis: 100vh;
   }
   body.viz-body {
-    height: unset;
-    width: unset;
+    height: 100%;
+    width: 100%;
   }
 }
 
