--- a/src/styles/pg-button.css
+++ b/src/styles/pg-button.css
@@ -78,8 +78,24 @@
 .pg-button-vertical-group > .selected,
 .pg-button-group > .selected {
   background-color: #f2f2f2;
+  border-color: var(--red);
 }
 
 .pg-button-group > .selected:focus {
   background-color: #f2f2f2 !important;
+}
+
+.pg-button-group .pg-button.selected:nth-child(n + 2) {
+  border-left-width: 2px;
+}
+
+.pg-button-group .pg-button.selected:nth-last-child(n + 2) {
+  border-right: 2px solid var(--red);
+}
+
+.pg-button-vertical-group .pg-button.selected:nth-child(n + 2) {
+  border-top-width: 2px;
+}
+.pg-button-vertical-group .pg-button.selected:nth-last-child(n + 2) {
+  border-bottom: 2px solid var(--red);
 }
