--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -18,11 +18,6 @@ body.viz-body {
   margin: 1em 0;
   padding-top: 0;
   padding-bottom: 0;
-
-  display: flex;
-  align-items: flex-end;
-  flex-wrap: wrap;
-
   color: var(--darkgrey);
 }
 
@@ -35,6 +30,8 @@ body.viz-body {
 .viz-name > h1 {
   font-size: 1.9rem;
   padding-right: 0.2em;
+  line-height: 1;
+  display: inline-block;
 }
 
 .viz-name > h1 > a {
@@ -48,6 +45,8 @@ body.viz-body {
   padding-left: 0.2em;
   font-weight: 500;
   padding-right: 1.5em;
+  line-height: 1;
+  display: inline-block;
 }
 
 .viz-name > h3 {
@@ -55,6 +54,8 @@ body.viz-body {
   font-weight: 500;
   margin: 0;
   color: var(--grey);
+  line-height: 1;
+  display: inline-block;
 }
 
 /** mobile **/
