--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -50,10 +50,10 @@ body.viz-body {
 }
 
 .viz-name > h3 {
-  font-size: 1rem;
+  font-size: 1.5em;
   font-weight: 500;
   margin: 0;
-  color: var(--grey);
+  color: var(--darkgrey);
   line-height: 1;
   display: inline-block;
 }
@@ -79,7 +79,7 @@ body.viz-body {
 }
 
 .viz-group-link {
-  color: inherit;
+  color: var(--darkgrey) !important;
   border-bottom: none;
 }
 
