--- a/src/global.css
+++ b/src/global.css
@@ -36,6 +36,14 @@
   }
 }
 
+@media only screen and (max-width: 767px) {
+  /** main.css thing */
+  body,
+  html {
+    height: 100%;
+  }
+}
+
 button.mapboxgl-popup-close-button {
   padding: 2px;
   color: var(--grey);
