compare mode toggle

--- a/src/styles/pg-button.css
+++ b/src/styles/pg-button.css
@@ -27,6 +27,11 @@
   background-color: #ffffff;
 }
 
+.pg-text-button {
+  width: unset;
+  padding: 0.2em 1em;
+}
+
 .pg-button:disabled {
   background-color: #d3d3d3;
   cursor: not-allowed;
