--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -58,13 +58,24 @@ body.viz-body {
 }
 
 .viz-subnav {
+  padding: 0;
+  margin: 0;
   margin-bottom: 1em;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.viz-subnav > ul {
+  display: flex;
+  flex-flow: nowrap row;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .viz-subnav li {
+  margin: 0;
   border: none !important;
 }
 
