--- a/src/global.css
+++ b/src/global.css
@@ -52,9 +52,10 @@ button.mapboxgl-popup-close-button {
 #vizbox input:focus,
 #vizbox button:focus,
 #vizbox select:focus {
-  outline: var(--red) 1px solid;
-  box-shadow: 0 0 0 4px #fff !important;
+  /* outline: var(--red) 1px solid; */
+  /* box-shadow: 0 0 0 4px #fff !important; */
   /* border: solid 1px var(--red) !important; */
+  border: 0;
   z-index: 10000;
   background-color: unset;
 }
