--- a/src/styles/map-container.css
+++ b/src/styles/map-container.css
@@ -1,8 +1,9 @@
 .container-bg {
   /* rounded design refresh */
-  border-radius: 7px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
   background-color: #ffffff;
-  box-shadow: 0px 4px 10px rgba(151, 151, 151, 0.25);
+  box-shadow: 0px 2px 4px rgba(151, 151, 151, 0.25);
 }
 
 .container-style {
