--- a/src/global.css
+++ b/src/global.css
@@ -49,11 +49,17 @@ button.mapboxgl-popup-close-button {
   color: var(--grey);
 }
 
+#vizbox input,
+#vizbox button,
+#vizbox select {
+  border-bottom: 2px solid transparent;
+}
 #vizbox input:focus,
 #vizbox button:focus,
 #vizbox select:focus {
   border: 0;
   z-index: 10000;
+  border-bottom: 2px solid var(--grey);
 }
 
 .mapboxgl-canvas:focus {
