style: migrate map control

--- a/src/global.css
+++ b/src/global.css
@@ -67,3 +67,4 @@
 @import './styles/message-overlay.css';
 @import './styles/vega.css';
 @import './styles/tooltip.css';
+@import './styles/uikit.css';
