--- a/src/styles/map-container.css
+++ b/src/styles/map-container.css
@@ -1,14 +1,8 @@
 .container-bg {
-  /* rounded design refresh */
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  background-color: #ffffff;
-  box-shadow: 0px 2px 4px rgba(151, 151, 151, 0.25);
+  border: 1px solid #e5e5e5;
 }
 
 .container-style {
   padding: 8px 8px;
   box-sizing: border-box;
-  transition: all 0.1s ease-in;
-  font-family: 'Open Sans', Helvetica, sans-serif !important;
 }
