build: work on hugo + build setup

--- a/themes/delphi/layouts/partials/footer.html
+++ b/themes/delphi/layouts/partials/footer.html
@@ -6,6 +6,6 @@
 	<script src="{{ $script.Permalink }}" {{ printf "integrity=%q" $script.Data.Integrity | safeHTMLAttr }}></script>
   
   {{ range .Page.Params.scripts }}
-	  <script src="{{ . | absURL }}"></script>
+	  <script src="{{ . | relURL }}"></script>
   {{ end }}
 </footer>
