--- a/src/wrapper/style.scss
+++ b/src/wrapper/style.scss
@@ -1,5 +1,6 @@
 // 1. Your custom variables and variable overwrites.
 // $global-link-color: #DA7D02;
+@import 'customize';
 
 // 2. Import default variables and available mixins.
 @import '~uikit/src/scss/variables-theme.scss';
