style: copy style customization from www-main

--- a/src/wrapper/style.scss
+++ b/src/wrapper/style.scss
@@ -1,5 +1,6 @@
 // 1. Your custom variables and variable overwrites.
 // $global-link-color: #DA7D02;
+@import 'customize';
 
 // 2. Import default variables and available mixins.
 @import '~uikit/src/scss/variables-theme.scss';
@@ -10,3 +11,6 @@
 
 // 4. Import UIkit.
 @import '~uikit/src/scss/uikit-theme.scss';
+
+// Components
+@import './components/font_awesome';
