--- a/src/wrapper/_customize.scss
+++ b/src/wrapper/_customize.scss
@@ -1,5 +1,5 @@
 // Font
-$global-font-family: "Open Sans", Roboto, Arial, sans-serif;
+$global-font-family: 'Open Sans', Roboto, Arial, sans-serif;
 
 $global-color: #666;
 $menu-active-color: #f03f3f;
