--- a/src/global.css
+++ b/src/global.css
@@ -66,3 +66,10 @@
 @import './styles/vega.css';
 @import './styles/tooltip.css';
 @import './styles/uikit.css';
+
+.grid-3-8 {
+  grid-column: 3 / 8;
+}
+.grid-8-11 {
+  grid-column: 8 / 11;
+}
