style(landing): add apply new styles

--- a/src/styles/uikit.css
+++ b/src/styles/uikit.css
@@ -46,3 +46,8 @@
   text-transform: none;
   transition: all 0.25s ease;
 }
+
+.uk-button-delphi__secondary {
+  background: #f0f1f3;
+  color: inherit;
+}
