--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -56,3 +56,15 @@
 .mobile-table > tbody > .row-group {
   border-bottom: none;
 }
+
+.mobile-fancy-header {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 2rem;
+  letter-spacing: 0.05em;
+  margin: 0.5em 0 0 0;
+}
+.mobile-fancy-header span {
+  text-transform: uppercase;
+  font-weight: 300;
+}
