--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -43,7 +43,12 @@
   vertical-align: top;
 }
 
+.mobile-th-blue {
+  color: #096dd9;
+}
+
 .mobile-th-range {
+  color: initial;
   position: relative;
   margin-top: 5px;
   padding: 2px 2px 0 2px;
