style: update landing styles

--- a/src/global.css
+++ b/src/global.css
@@ -67,6 +67,9 @@
 @import './styles/tooltip.css';
 @import './styles/uikit.css';
 
+.grid-4-10 {
+  grid-column: 4 / 10;
+}
 .grid-3-8 {
   grid-column: 3 / 8;
 }
