--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -214,7 +214,7 @@
 
 .chart-aspect-4-3 {
   position: relative;
-  padding-top: 75%;
+  padding-top: calc(60% + 30px);
 }
 
 .chart-aspect-4-3 > .vega-embed {
@@ -223,6 +223,11 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.mobile-map > canvas {
+  border: 1px solid #f0f1f3;
+  border-radius: 3px;
 }
 
 .mobile-two-col {
