--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -278,3 +278,15 @@
     font-weight: 600;
   }
 }
+
+/* have it here such that it can be used outside of svelte */
+.per100k {
+  display: inline-flex;
+  flex-direction: column;
+  text-align: center;
+  transform: translateY(-40%);
+}
+.per100k > span {
+  font-size: 50%;
+  line-height: 1;
+}
