--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -137,6 +137,10 @@
 }
 
 @media only screen and (min-width: 750px) {
+  .mobile-row-annotation {
+    margin-left: -21px !important;
+  }
+
   .mobile-table > tbody {
     font-size: 1rem;
   }
