--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -237,9 +237,17 @@
 
 .chart-breakout.vega-embed,
 .chart-breakout > .vega-embed {
+  --max-width: 95vw;
   /* breakout the chart up to 80vw */
-  width: max(100%, 80vw);
-  margin-left: min(0px, calc((80vw - 100%) / -2));
+  width: max(100%, var(--max-width));
+  margin-left: min(0px, calc((var(--max-width) - 100%) / -2));
+}
+
+@media only screen and (min-width: 1600px) {
+  .chart-breakout.vega-embed,
+  .chart-breakout > .vega-embed {
+    --max-width: 80vw;
+  }
 }
 
 .mobile-map > canvas {
