--- a/src/modes/mobile/common.css
+++ b/src/modes/mobile/common.css
@@ -240,7 +240,7 @@
   --max-width: 95vw;
   /* breakout the chart up to 80vw */
   width: max(100%, var(--max-width));
-  margin-left: min(0px, calc((var(--max-width) - 100%) / -2));
+  margin-left: min(0px, calc(var(--max-width) / -2 + 50%));
 }
 
 @media only screen and (min-width: 1600px) {
