--- a/src/global.css
+++ b/src/global.css
@@ -51,3 +51,12 @@
 .grid-7-11 {
   grid-column: 7 / 11;
 }
+.grid-1-5 {
+  grid-column: 1 / 5;
+}
+.grid-5-9 {
+  grid-column: 5 / 9;
+}
+.grid-9-13 {
+  grid-column: 9 / 13;
+}
