--- a/src/global.css
+++ b/src/global.css
@@ -67,3 +67,70 @@
 .grid-7-13 {
   grid-column: 7 / 13;
 }
+
+.grid-1 {
+  grid-column-start: 1;
+}
+.grid-2 {
+  grid-column-start: 2;
+}
+.grid-3 {
+  grid-column-start: 3;
+}
+.grid-4 {
+  grid-column-start: 4;
+}
+.grid-5 {
+  grid-column-start: 5;
+}
+.grid-6 {
+  grid-column-start: 6;
+}
+.grid-7 {
+  grid-column-start: 7;
+}
+.grid-8 {
+  grid-column-start: 8;
+}
+.grid-9 {
+  grid-column-start: 9;
+}
+.grid-10 {
+  grid-column-start: 10;
+}
+.grid-11 {
+  grid-column-start: 11;
+}
+.grid-12 {
+  grid-column-start: 12;
+}
+.grid-13 {
+  grid-column-start: 13;
+}
+.grid-span-1 {
+  grid-column-end: span 1;
+}
+.grid-span-2 {
+  grid-column-end: span 2;
+}
+.grid-span-3 {
+  grid-column-end: span 3;
+}
+.grid-span-4 {
+  grid-column-end: span 4;
+}
+.grid-span-5 {
+  grid-column-end: span 5;
+}
+.grid-span-6 {
+  grid-column-end: span 6;
+}
+.grid-span-7 {
+  grid-column-end: span 7;
+}
+.grid-span-8 {
+  grid-column-end: span 8;
+}
+.grid-span-9 {
+  grid-column-end: span 9;
+}
