--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -268,6 +268,15 @@
   font-size: 0.75rem;
 }
 
+.mobile-three-col {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-flow: row;
+  column-gap: 1em;
+  row-gap: 0.5em;
+  font-size: 0.75rem;
+}
+
 .mobile-two-col__highlight {
   padding: 2rem;
   column-gap: 3em;
