--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -75,9 +75,18 @@
   }
 }
 
+.mobile-back-line {
+  display: flex;
+  justify-content: center;
+}
+
+.mobile-back-line h2 {
+  position: relative;
+}
+
 .mobile-back {
   position: absolute;
-  left: 1em;
+  left: -1.5em;
   top: 0;
   height: 100%;
   width: 0.7em;
@@ -87,6 +96,11 @@
   background: none;
   margin: 0;
   padding: 0;
+  cursor: pointer;
+}
+
+.mobile-back:hover {
+  opacity: 0.5;
 }
 
 .mobile-th {
