--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -69,6 +69,11 @@
   text-transform: uppercase;
 }
 
+.mobile-header-line a.uk-link-muted,
+.mobile-header-line a.uk-link-muted:visited {
+  color: inherit !important;
+}
+
 @media only screen and (min-width: 750px) {
   .mobile-header-line h2 {
     font-size: 1.125rem;
